<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>mobile_robot2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kushgarg@todo.todo">kushgarg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_bringup</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>velodyne_description</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
